why-choose-us image alignment issue fixed

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1192,7 +1192,7 @@ swiper-container {
   }
 
   .doctor-img-custom {
-    max-height: 400px;
+    max-height: 420px;
     width: 100%;
     object-fit: contain;
   }
@@ -1225,7 +1225,34 @@ swiper-container {
     .gap-3 {
       gap: 1rem !important;
     }
+    .key_surgeries{
+        font-size: 13px; 
+    }
   }
   .choose_txt{
     color: rgba(0, 143, 213, 1);
+  }
+  .key_surgeries{
+    text-align: justify;
+    margin-bottom: 0.5rem; 
+    font-size: 16px; 
+    font-weight: 500;
+    color: #828282;
+  }
+  .doctor-img-custom {
+    position: static;
+    width: 100%;
+    height: auto;
+  }
+  
+  @media (min-width: 768px) {
+    .doctor-img-custom {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+  
+    .position-relative {
+      min-height: 100%;
+    }
   }
